[package]
name = "hoot"
version = "0.1.3"
edition = "2021"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "no_std, allocation free http 1.1 library"
keywords = ["http", "server", "web"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/hoot"

# MSRV
rust-version = "1.61"

[package.metadata.docs.rs]
features = ["all"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
all = ["std"]
std = []

[dependencies]
httparse = { version = "1.8.0", default-features = false }
log = { version = "0.4.20", default-features = false }

[dev-dependencies]
memoffset = "0.9.0"
