[package]
name = "ureq-proto"
version = "0.2.0"
edition = "2021"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "ureq support crate"
keywords = ["http", "server", "web"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/ureq-proto"

# MSRV
rust-version = "1.67"

[features]

[dependencies]
http = { version = "1.1.0", default-features = false, features = ["std"] }
httparse = { version = "1.8.0", default-features = false }
log = "0.4.22"
url = "2.5.2"
