[package]
name = "hoot"
version = "0.2.0"
edition = "2021"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "no_std, allocation free http 1.1 library"
keywords = ["http", "server", "web"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/hoot"

# MSRV
rust-version = "1.61"

[package.metadata.docs.rs]
features = ["all"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
all = ["std", "http_crate"]
http_crate = ["dep:http", "std"]
std = []

[dependencies]
httparse = { version = "1.8.0", default-features = false }
log = { version = "0.4.20", default-features = false }
http = { version = "1.1.0", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
memoffset = "0.9.0"
