[package]
name = "hoot"
version = "0.2.0"
edition = "2021"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "http 1.1 library"
keywords = ["http", "server", "web"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/hoot"

# MSRV
rust-version = "1.61"

[package.metadata.docs.rs]
features = ["all"]
rustdoc-args = ["--cfg", "docsrs"]

[features]

[dependencies]
httparse = { version = "1.8.0", default-features = false }
http = { version = "1.1.0", default-features = false, features = ["std"] }
thiserror = "1.0.59"
log = "0.4.21"
