[package]
name = "hootbin"
version = "0.2.0"
edition = "2021"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "hoot based library to emulate httpbin"
keywords = ["http", "server", "web"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/hoot"

# MSRV
rust-version = "1.61"

[dependencies]
fastrand = "2.0.1"
hoot = { path = "../hoot", version = "0.2", features = ["std"] }
hooturl = { path = "../hooturl", version = "0.2", features = ["std"] }
thiserror = "1.0.56"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.111" }
